--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
       <artifactId>spring-core</artifactId>
       <version>5.2.15.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.2.15.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.2.15.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
